fix: adjust camera position to prevent globe top clipping
- Camera now looks from above (Y=1.2) to show globe lower in frame
- Adjusted globe-preview position to top: 15%

--- a/src/components/CreativeWork.css
+++ b/src/components/CreativeWork.css
@@ -105,7 +105,7 @@
 /* Globe Preview - positioned to bottom-right corner, clipped */
 .globe-preview {
   position: absolute;
-  top: 28%;
+  top: 15%;
   right: -45%;
   width: 140%;
   height: 140%;
